CuBoulder/tiamat-theme#435 removes `D9` from theme name

--- a/templates/content/node--form-page.html.twig
+++ b/templates/content/node--form-page.html.twig
@@ -5,9 +5,9 @@
  */
 #}
 
-{{ attach_library('boulderD9_base/ucb-form-page') }}
+{{ attach_library('boulder_base/ucb-form-page') }}
 
-{% set sidebar_position = drupal_config('boulderD9_base.settings', 'ucb_sidebar_position') %}
+{% set sidebar_position = drupal_config('boulder_base.settings', 'ucb_sidebar_position') %}
 
 <article{{attributes.addClass(classes)}}>
 	<div class="container">
