--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -16,9 +16,9 @@
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
     ]
 %}
-{{ attach_library('boulderD9_base/ucb-page') }}
+{{ attach_library('boulder_base/ucb-page') }}
 
-{{ attach_library('boulderD9_base/ucb-newsletter-email') }}
+{{ attach_library('boulder_base/ucb-newsletter-email') }}
 
 <div class="container" id="email-preview" style="background-color: grey">
     <html>
