--- a/templates/content/node--basic-page.html.twig
+++ b/templates/content/node--basic-page.html.twig
@@ -68,7 +68,7 @@
  */
 #}
 
-{{ attach_library('boulderD9_base/ucb-page') }}
+{{ attach_library('boulder_base/ucb-page') }}
 
 {#Dummy variable to ensure that all content tags are set for caching purposes#}
 {% set content_render = content|render %}
