--- a/templates/field/field--field-ucb-article-categories.html.twig
+++ b/templates/field/field--field-ucb-article-categories.html.twig
@@ -5,7 +5,7 @@
  */
 #}
 
-{% for item in items %}
+{% for item in items|sort %}
 {# Only shows Taxonomy terms with display = true #}
     {% if item.content['#options'].entity.field_ucb_category_display.value == 1 %}
         {{ item.content|render }}
