--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -16,6 +16,28 @@
 	view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 ] %}
 
+{% set articlesJSON = (url('<front>')|render|trim('/'))
+    ~ '/jsonapi/node/ucb_article'
+    ~ '?include[node--ucb_article]=uid,title,ucb_article_content,created,field_ucb_article_summary,field_ucb_article_byline,field_ucb_article_categories,field_ucb_article_tags,field_ucb_article_thumbnail'
+    ~ '&include=field_ucb_article_thumbnail.field_media_image'
+    ~ '&fields[file--file]=uri,url'
+  %}
+
+    {# Filter on only published (status = true) content #}
+	{% set PublishedFilter = '&filter[publish-check][condition][path]=status'
+    ~ '&filter[publish-check][condition][value]=1'
+    ~ '&filter[publish-check][condition][memberOf]=published'
+  %}
+
+    {# pagination filter #}
+	{% set pageCount = 10 %}
+	{% set pageCountFilter = '&page[limit]=' ~ pageCount %}
+	
+	{# sorting filter #}
+	{% set sortFilter = '&sort[sort-created][path]=created&sort[sort-created][direction]=DESC' %}
+
+
+
 <article{{attributes.addClass(classes)}} itemscope itemtype="https://schema.org/Person">
 	<div class="container ucb-person-header">
 		<h1 class="ucb-person-name">
@@ -64,6 +86,19 @@
 					</div>
 				{% endif %}
 			</div>
+			<person-article-list
+  				jsonapi="{{ articlesJSON }}{{ PublishFilter }}{{ pageCountFilter }}{{ sortFilter }}"
+  			>
+				<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+					<i class="fas fa-spinner fa-3x fa-pulse"></i>
+				</div>
+				<div id="ucb-al-error" style="display:none" class="ucb-list-msg">
+					<h3>An error has occured - please check your filters and try again</h3>
+				</div>
+				<div id="ucb-al-api-error" style="display:none" class="ucb-list-msg">
+					<h3>An error has occured with the API - please try again later</h3>
+				</div>
+			</person-article-list>
 		</div>
 	</div>
 </article>
