--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -18,6 +18,12 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 ]
 %}
 
+{# Used for hiding site title visibly using sr-only bootstrap class, if front page #}
+{% set isFrontPage = '' %}
+{% if is_front %}
+	{% set isFrontPage = 'sr-only' %}
+{% endif %}
+
 {#Dummy variable to ensure that all content tags are set for caching purposes#}
 {% set content_render = content|render %}
 
@@ -32,7 +38,7 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
 		data-loggedin="{{isLoggedIn}}"
 		>
 		{# Newsletter Title #}
-		<h1 class="ucb-newsletter-title" itemprop="name">{{ label }}</h1>
+		<h1 class="ucb-newsletter-title {{isFrontPage}}" itemprop="name">{{ label }}</h1>
 		{# Newsletter Intro #}
 		{% if content.field_newsletter_intro_image|render %}
 			<div id="newsletter-intro-img">{{ content.field_newsletter_intro_image }}</div>
