--- a/templates/content/node--ucb-issue-archive.html.twig
+++ b/templates/content/node--ucb-issue-archive.html.twig
@@ -12,9 +12,15 @@
 	]
 %}
 
+{# Used for hiding site title visibly using sr-only bootstrap class, if front page #}
+{% set isFrontPage = '' %}
+{% if is_front %}
+	{% set isFrontPage = 'sr-only' %}
+{% endif %}
+
 <div id="ucb-issue-archive"{{attributes.addClass(classes)}}>
 	<div class="ucb-issue-archive-title">
-		<h1{{title_attributes}}>
+		<h1{{title_attributes}} class="{{isFrontPage}}">
 			{{ label }}
 		</h1>
 	</div>
