--- a/templates/content/node--form-page.html.twig
+++ b/templates/content/node--form-page.html.twig
@@ -9,9 +9,15 @@
 
 {% set sidebar_position = drupal_config('boulder_base.settings', 'ucb_sidebar_position') %}
 
+{# Used for hiding site title visibly using sr-only bootstrap class, if front page #}
+{% set isFrontPage = '' %}
+{% if is_front %}
+	{% set isFrontPage = 'sr-only' %}
+{% endif %}
+
 <article{{attributes.addClass(classes)}}>
 	<div class="container">
-		<h1{{title_attributes}}>
+		<h1{{title_attributes}} class="{{isFrontPage}}">
 			{{ label }}
 		</h1>
 	</div>
