wip: Articles by person API call works with module, needs styling

--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -86,19 +86,25 @@
 					</div>
 				{% endif %}
 			</div>
-			<person-article-list
-  				jsonapi="{{ articlesJSON }}{{ PublishFilter }}{{ pageCountFilter }}{{ sortFilter }}"
-  			>
-				<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
-					<i class="fas fa-spinner fa-3x fa-pulse"></i>
-				</div>
-				<div id="ucb-al-error" style="display:none" class="ucb-list-msg">
-					<h3>An error has occured - please check your filters and try again</h3>
-				</div>
-				<div id="ucb-al-api-error" style="display:none" class="ucb-list-msg">
-					<h3>An error has occured with the API - please try again later</h3>
-				</div>
-			</person-article-list>
+			<div class="ucb-articles-by-person-block">
+				<person-article-list
+					jsonapi="{{ articlesJSON }}{{ PublishFilter }}{{ pageCountFilter }}{{ sortFilter }}"
+					nodeId="{{node.id}}"
+				>
+					<div id="ucb-person-article-block-title" style="display:none">
+						<h3>Articles by {{ content.field_ucb_person_first_name }} {{ content.field_ucb_person_last_name }}</h3>
+					</div>
+					<div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+						<i class="fas fa-spinner fa-3x fa-pulse"></i>
+					</div>
+					<div id="ucb-al-error" style="display:none" class="ucb-list-msg">
+						<h3>An error has occured - please check your filters and try again</h3>
+					</div>
+					<div id="ucb-al-api-error" style="display:none" class="ucb-list-msg">
+						<h3>An error has occured with the API - please try again later</h3>
+					</div>
+				</person-article-list>
+			</div>
 		</div>
 	</div>
 </article>
