--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -45,6 +45,10 @@ a.ucb-person-social-link i.fab {
 	margin: 0;
 }
 
+.ucb-articles-by-person-block{
+	float: right;
+}
+
 @media screen and (min-width: 768px) {
 	.ucb-person-img {
 		float: right;
