--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -64,7 +64,7 @@
 					</div>
 				{% endif %}
 			</div>
-			<div class="ucb-articles-by-person-block">
+			<div class="ucb-articles-by-person-block container">
 				<person-article-list
 					jsonapi="{{ articlesJSON }}{{ PublishFilter }}{{ pageCountFilter }}{{ sortFilter }}"
 					nodeId="{{node.id}}"
