--- a/templates/content/node--ucb-person.html.twig
+++ b/templates/content/node--ucb-person.html.twig
@@ -76,7 +76,7 @@
 						<i class="fas fa-spinner fa-3x fa-pulse"></i>
 					</div>
 					<div id="ucb-al-error" style="display:none" class="ucb-list-msg">
-						<h3>An error has occured - please check your filters and try again</h3>
+						<h3>An error has occured - please check the console. </h3>
 					</div>
 					<div id="ucb-al-api-error" style="display:none" class="ucb-list-msg">
 						<h3>An error has occured with the API - please try again later</h3>
