--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -49,13 +49,15 @@ a.ucb-person-social-link i.fab {
 
 .ucb-articles-by-person-block{
 	display: block;
+	margin-bottom: 20px;
 }
 
 .ucb-article-card-title{
 	margin: 0;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
+
 
 @media screen and (min-width: 768px) {
 	.ucb-person-img {
