CuBoulder/tiamat-theme#460 hides breadcrumbs on top-level pages

--- a/templates/navigation/breadcrumb.html.twig
+++ b/templates/navigation/breadcrumb.html.twig
@@ -14,23 +14,22 @@
  * - breadcrumb: Breadcrumb trail items.
  */
 #}
-{% if breadcrumb %}
+{% set breadcrumb = breadcrumb|filter(item => item.text) %}
+{% if breadcrumb|length > 1 %}
 	{{ attach_library('boulder_base/ucb-breadcrumb') }}
 	<div class="ucb-breadcrumb">
 		<nav role="navigation" aria-labelledby="system-breadcrumb">
 			<h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
 			<ul>
 				{% for item in breadcrumb %}
-					{% if item.text %}
-						{% if item.url %}
-							<li class="ucb-breadcrumb-link">
-								<a href="{{ item.url }}">{{ item.text }}</a>
-							</li>
-						{% else %}
-							<li class="ucb-breadcrumb-static">
-								<span>{{ item.text }}</span>
-							</li>
-						{% endif %}
+					{% if item.url %}
+						<li class="ucb-breadcrumb-link">
+							<a href="{{ item.url }}">{{ item.text }}</a>
+						</li>
+					{% else %}
+						<li class="ucb-breadcrumb-static">
+							<span>{{ item.text }}</span>
+						</li>
 					{% endif %}
 				{% endfor %}
 				{% if current_page_title %}
