wip: fix loader

--- a/templates/block/block--ucb-people-list-block.html.twig
+++ b/templates/block/block--ucb-people-list-block.html.twig
@@ -69,9 +69,9 @@
     config="{{ config|json_encode }}"
     user-config="{}"
 >
-  <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
+  {# <div id="ucb-al-loading" class="ucb-list-msg ucb-loading-data">
     <i class="fas fa-spinner fa-3x fa-pulse"></i>
-  </div>
+  </div> #}
   <div id="ucb-al-error" style="display:none" class="ucb-list-msg">
     <h3>An error has occured - please check your filters and try again</h3>
   </div>
