--- a/templates/block/block--video-reveal.html.twig
+++ b/templates/block/block--video-reveal.html.twig
@@ -52,7 +52,7 @@
 				<div class="ucb-video-reveal-video-wrapper" id="ucb-video-reveal-video-wrapper-{{blockId}}">
 					<script src="https://www.youtube.com/player_api"></script>
 					<script type="text/javascript">
-					window.addEventListener('load', () => enableVideoHero('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{blockId}}'));
+					window.addEventListener('load', () => enableVideoReveal('{{ videoURL }}', 'ucb-video-reveal-video-wrapper-{{blockId}}'));
 					</script>
 				</div>
 				{# {{ content.field_video_reveal_video|render }} #}
