--- a/css/block/video-reveal.css
+++ b/css/block/video-reveal.css
@@ -1,5 +1,6 @@
-.ucb-vid-reveal {
-  position: relative;
+.ucb-video-reveal {
+  margin-top: 20px;
+  aspect-ratio: 16/9;
 }
 
 .ucb-video-text-div {
@@ -51,7 +52,7 @@ span.ucb-vid-reveal-icon {
   padding-bottom: 0px;
   max-height: 600px;
   object-fit: cover;
-  aspect-ratio: 16/9;
+  aspect-ratio: 16/9; 
 }
 
 .ucb-video-reveal-video-wrapper{
