Edge-to-edge update
Updated the templates and some css to accommodate the new edge-to-edge option

--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -103,3 +103,9 @@
   height: 1em;
   margin: .5em
 }
+
+.ucb-hero-outer-wrapper {
+  --bs-gutter-x: 1.5rem;
+  padding-right: calc(var(--bs-gutter-x) * .5);
+  padding-left: calc(var(--bs-gutter-x) * .5);
+}
