--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -26,6 +26,9 @@
 
 .ucb-boostrap-layout-section .column .block:first-child.block-hero-unit {
   margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .block-hero-unit.size-large {
@@ -57,7 +60,7 @@
 
 .block-hero-unit .ucb-hero-unit-content {
   position: relative;
-  z-index: 0;
+  z-index: 1;
 }
 
 .ucb-hero-unit-video-wrapper {
@@ -77,23 +80,38 @@
 
 .block-hero-unit.size-large .ucb-hero-unit-video-wrapper {
   margin-left: -2rem;
-  margin-top: -1em;
 }
 
 .block-hero-unit.size-medium .ucb-hero-unit-video-wrapper {
   margin-left: -2rem;
-  margin-top: -1em;
 }
 
 .block-hero-unit.size-small .ucb-hero-unit-video-wrapper {
   margin-left: -1rem;
-  margin-top: -1em;
 }
 
 .ucb-hero-unit-video-controls-wrapper {
   position: absolute;
   bottom: 0;
   z-index: 15;
+}
+
+.ucb-overlay-dark .hero-unit-video-overlay {
+  background-color: rgba(20, 20, 20, 0.5);
+  background-blend-mode: overlay;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+
+.ucb-overlay-light .hero-unit-video-overlay {
+  background-color: rgba(200, 200, 200, 0.7);
+  background-blend-mode: overlay;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
 }
 
 .ucb-hero-unit-video-control-button {
@@ -108,4 +126,46 @@
   --bs-gutter-x: 1.5rem;
   padding-right: calc(var(--bs-gutter-x) * .5);
   padding-left: calc(var(--bs-gutter-x) * .5);
+}
+
+.ucb-hero-unit-image {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+}
+
+.ucb-hero-unit-video {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.ucb-hero-unit-video .ucb-hero-unit-video-wrapper {
+  max-width: 100%;
+  width: 100%;
+  max-height: 100%;
+  height: 100vh;
+}
+
+.ucb-hero-unit-video-wrapper {
+  max-width: 100%;
+  width: 100%;
+  max-height: 100%;
+  height: 100%;
+}
+
+.ucb-hero-unit-video-player-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.ucb-hero-unit-video-player-wrapper iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.ucb-boostrap-layout-section .column .block-hero-unit .block:first-child {
+  padding-top: 0;
+  padding-bottom: 0;
 }
