--- a/templates/block/block--hero-unit.html.twig
+++ b/templates/block/block--hero-unit.html.twig
@@ -48,6 +48,15 @@
 	{% set videoClass = "" %}
 {% endif %}
 
+{# set classes for the size of the component if using background media #}
+{% if videoURL is defined %}
+	{% set containerSize = "ucb-hero-unit-video" %}
+{% elseif content['#block_content'].field_size_priority.value is same as("1") %}
+	{% set containerSize = "ucb-hero-unit-image" %}
+{% else %}
+	{% set containerSize = "ucb-hero-unit-text" %}
+{% endif %}
+
 
 {# set classes for the size of the component #}
 {% if content['#block_content'].field_size.value is same as("0") %}
@@ -78,9 +87,10 @@
 		{% endif %}
 		{{ title_suffix }}
 		{% block content %}
-			<div{{attributes.addClass(classes,size,overlayClass,videoClass).setAttribute("style","#{bgValue}")}}>
+			<div{{attributes.addClass(classes,size,overlayClass,videoClass,containerSize).setAttribute("style","#{bgValue}")}}>
 				{% if videoURL is defined %}
 					<div hidden class="ucb-hero-unit-video-wrapper">
+						<div class="hero-unit-video-overlay"></div>
 						<div class="ucb-hero-unit-video-player-wrapper" id="ucb_hero_unit_video_player_{{ blockId }}"></div>
 						<div class="ucb-hero-unit-video-controls-wrapper">
 							<div class="ucb-hero-unit-video-controls">
@@ -91,7 +101,7 @@
 						</div>
 					</div>
 					<script type="text/javascript">
-						window.addEventListener('load', () => enableVideoHero('{{ videoURL }}', 'ucb_hero_unit_video_player_ {{ blockId }}'));
+						window.addEventListener('load', () => enableVideoHero('{{ videoURL }}', 'ucb_hero_unit_video_player_{{ blockId }}'));
 					</script>
 				{% endif %}
 				{% set linkColor = content['#block_content'].field_link_color.value %}
