--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -36,15 +36,13 @@
 }
 
 .block-hero-unit.size-large .ucb-hero-unit-content {
-  padding: 100px 2rem;
-}
-
-.block-hero-unit.size-medium .ucb-hero-unit-content {
-  padding: 2rem;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .block-hero-unit.size-small .ucb-hero-unit-content {
-  padding: 1rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .ucb-overlay-dark {
@@ -77,17 +75,13 @@
   display: none;
 }
 
-.block-hero-unit.size-large .ucb-hero-unit-video-wrapper {
-  margin-left: -2rem;
-}
-
-.block-hero-unit.size-medium .ucb-hero-unit-video-wrapper {
+/* .block-hero-unit.size-large .ucb-hero-unit-video-wrapper {
   margin-left: -2rem;
 }
 
 .block-hero-unit.size-small .ucb-hero-unit-video-wrapper {
   margin-left: -1rem;
-}
+} */
 
 .ucb-hero-unit-video-controls-wrapper {
   position: absolute;
@@ -127,14 +121,8 @@
   padding-left: calc(var(--bs-gutter-x) * .5);
 }
 
-.ucb-hero-unit-image {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-}
-
 .ucb-hero-unit-video {
-  height: 100vh;
+  aspect-ratio: 16 / 9;
   display: flex;
   align-items: center;
   position: relative;
