--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -65,8 +65,8 @@
 					{{ page.content }}
 					<div class="ucb-user-profile-documentation">
 					<h2>Documentation and Status </h2>
-						<a class = "ucb-user-profile-doc-link" href = "https://www.google.com"> Help Documentation </a>
-						<a class = "ucb-user-profile-doc-link" href = "https://www.youtube.com"> Pantheon Status </a>
+						<a class = "ucb-user-profile-doc-link" href = "https://github.com/CuBoulder/Documentation"> Help Documentation </a>
+						<a class = "ucb-user-profile-doc-link" href = "https://www.google.com"> Pantheon Status </a>
 					</div>
 				</div>
 			</div>{# /.layout-content #}
