--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -14,7 +14,7 @@
       {{ content }}
     </div>
     <div class="col-log-4 col-md-4 col-sm-6 col-xs-12 offset-lg-4 offset-md-4">
-      <div class="ucb-info-footer">
+      <div class="ucb-footer">
         <p><a href="https://www.colorado.edu"><img alt="Be Boulder." class="ucb-footer-be-boulder" src="https://cdn.colorado.edu/static/brand-assets/live/images/be-boulder-white.svg" style="max-width:240px; height:auto;" /></a></p>
         <p><a class="ucb-home-link" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
         <p>© Regents of the University of Colorado</p>
