--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -66,7 +66,7 @@
 					<div class="ucb-user-profile-documentation">
 					<h2>Documentation and Status </h2>
 						<a class = "ucb-user-profile-doc-link" href = "https://github.com/CuBoulder/Documentation"> Help Documentation </a>
-						<a class = "ucb-user-profile-doc-link" href = "https://www.google.com"> Pantheon Status </a>
+						<a class = "ucb-user-profile-doc-link" href = "https://status.pantheon.io"> Pantheon Status </a>
 					</div>
 				</div>
 			</div>{# /.layout-content #}
