--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@
   
   .ucb-footer-bottom {
     color: white;
-    padding: 1em 0;
+    padding: 40px 0;
     text-align: left;
     font-size: 0.9rem;
   }
