--- a/css/ucb-article-list-block.css
+++ b/css/ucb-article-list-block.css
@@ -1,25 +1,17 @@
 .ucb-article-list-block-button-container{
-    text-align: center;
+    text-align: right;
 }
 
 .ucb-article-list-block-button{
-    display: inline-block;
-    padding: 5px 10px;
-    font-weight: bold;
-    font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
-    margin-bottom: 5px;
-    background-clip: padding-box;
-    color: #0277BD !important;
-    border: 1px solid #0277BD;
-    border-radius: 0px;
-    background-color: transparent;
+    font-weight: normal;
+    margin: 0;
 }
 
-.ucb-article-list-block-button:hover{
+/* .ucb-article-list-block-button:hover{
     transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease;
     background-color: #0277BD;
     color: white !important;
-}
+} */
 
 .ucb-article-card{
     margin-bottom: 20px;
